# micro-gl

./: .gitignore  CMakeLists.txt  README.md  TODO.md
chipX/desktop/: CMakeLists.txt  main.cpp
chipX/desktop/cmake/: FindPORTAUDIO.cmake  FindRtAudio.cmake
chipX/desktop/src/: DesktopAudioEngine.cpp  DesktopAudioEngine.h
chipX/engine/: CMakeLists.txt
chipX/engine/docs/: ref.md
chipX/engine/include/: BaseAudioEngine.h
chipX/engine/src/: BaseAudioEngine.cpp  Logger.cpp  Logger.h
chipX/gfx/fontium/: CMakeLists.txt  Fontium.h  README.md  bits.cpp  bits.h  bundle.h  color_t.h  fontium-cli.cpp  options.h  types.cpp  types.h  utils.cpp  utils.h
chipX/gfx/fontium/assets/: TerminusBold-16.bdf  bitbuntu-full.bdf
chipX/gfx/fontium/cli/: bundle.h  fontium-cli.cpp  options.h  token_parser.h  utils.cpp  utils.h
chipX/gfx/fontium/src/: AbstractExporter.h  AbstractLayout.cpp  AbstractLayout.h  BitmapFontData.h  ExportFactory.h  FontConfig.h  FontRenderer.cpp  FontRenderer.h  FontRendererResult.h  Fontium.cpp  ImageComposer.h  LayoutConfig.h  LayoutFactory.h  LayoutResult.h  abstractexporter.h  abstractlayouter.cpp  abstractlayouter.h  bitmap_font.h  common_types.h  fontbuilder.h  fontconfig.h  fontrenderer.cpp  layoutconfig.h  utils.cpp  utils.h
chipX/gfx/imagium/: CMakeLists.txt  ImageWriterWorker.h  Imagium.cpp  Imagium.h  README.md  addressable_ram.h  bits.cpp  bits.h  bundle.h  cli.cpp  color_t.h  converter.h  example_decode.cpp  example_decode2.cpp  imagium-cli.cpp  options.h  png_palette_converter.h  png_true_color_converter.h  png_true_color_worker.h  regular_converter.h  token_parser.h  typed_packed_array.h  typed_unpacked_array.h  types.cpp  types.h  utils.cpp  utils.h
chipX/gfx/imagium/cli/: bundle.h  imagium-cli.cpp  options.h  token_parser.h  utils.cpp  utils.h
chipX/gfx/imagium/src/: Imagium.cpp  addressable_ram.h  bits.cpp  bits.h  color_t.h  converter.h  png_palette_converter.h  regular_converter.h  typed_packed_array.h  types.cpp  types.h  utils.h
chipX/gfx/microgl/: CMakeLists.txt
chipX/gfx/microgl-sdl/: CMakeLists.txt  CMakeLists_old.txt  example_3d_camera.cpp  example_3d_pipeline.cpp  example_3d_sampler_shader_and_z_buffer.cpp  example_3d_shader_color.cpp  example_3d_shaders_flat_color.cpp  example_3d_simple_pipeline.cpp  example_3d_single_triangle_shaders_with_ortho.cpp  example_3d_z_buffer.cpp  example_blend_modes.cpp  example_clear.cpp  example_complex_to_planar_subdivision.cpp  example_compositing.cpp  example_draw_3d_z_buffer.cpp  example_draw_bezier_patch.cpp  example_draw_bitmap_fonts.cpp  example_draw_bitmap_indexed_palette.cpp  example_draw_bitmap_packed.cpp  example_draw_blocks_3d_raster.cpp  example_draw_blocks_masks.cpp  example_draw_blocks_patch.cpp  example_draw_blocks_quads.cpp  example_draw_blocks_rouned_quads.cpp  example_draw_circles.cpp  example_draw_masks.cpp  example_draw_polygon_sampler.cpp  example_draw_quadrilaterals.cpp  example_draw_rect.cpp  example_draw_rect_axial.cpp  example_draw_rect_transform.cpp  example_draw_rounded_rectangle.cpp  example_draw_sampler_axial_gradient.cpp  example_draw_sampler_flat_color.cpp  example_draw_sampler_gradient_2_colors_fast.cpp  example_draw_sampler_gradient_angular_linear.cpp  example_draw_sampler_gradient_axial.cpp  example_draw_sampler_gradient_line.cpp  example_draw_sampler_gradient_radial.cpp  example_draw_sampler_texture.cpp  (+104 more)
chipX/gfx/microgl-sdl/data/: bitmap_1_palette_256_colors copy.h  model_3d.h  model_3d_cube.h  model_3d_tree.h  packed.h  packed_1.h  packed_4.h
chipX/gfx/microgl-sdl/src/: Resources.cpp  Resources.h  example.h
chipX/gfx/microgl-sdl/text/: Digital-7-10.bdf  Digital-7-20.bdf  myFont.fnt
chipX/gfx/microgl/docs/: Notes.md  Todo.md  examples.md  (+1 more)
examples/: CMakeLists.txt  bug_1.cpp  example_3d_sampler_shader_and_z_buffer.cpp  example_3d_shader_color.cpp  example_3d_shaders_flat_color.cpp  example_3d_simple_pipeline.cpp  example_3d_single_triangle_shaders_with_ortho.cpp  example_bentley_ottmann.cpp  example_blend_modes.cpp  example_blocks_3d_raster.cpp  example_blocks_masks.cpp  example_blocks_patch.cpp  example_blocks_rect.cpp  example_blocks_rounded_rect.cpp  example_blocks_rouned_quads.cpp  example_clear.cpp  example_coder_converter.cpp  example_coder_generator.cpp  example_coder_generator_test.cpp  example_compositing.cpp  example_draw_arcs.cpp  example_draw_bezier_patch.cpp  example_draw_bitmap_fonts.cpp  example_draw_bitmap_indexed_palette.cpp  example_draw_bitmap_packed.cpp  example_draw_blocks_3d_raster.cpp  example_draw_blocks_masks.cpp  example_draw_blocks_patch.cpp  example_draw_blocks_quads.cpp  example_draw_blocks_rouned_quads.cpp  example_draw_circles.cpp  example_draw_masks.cpp  example_draw_path.cpp  example_draw_path_stroke.cpp  example_draw_pie.cpp  example_draw_polygon.cpp  example_draw_polygon_sampler.cpp  example_draw_quadrilaterals.cpp  example_draw_rect_axial.cpp  example_draw_rect_transform.cpp  (+61 more)
examples/cmake/: FindSDL2.cmake
examples/data/: bitmap_1_palette_16_colors.h  bitmap_1_palette_256_colors.h  bitmap_1_palette_2_colors.h  bitmap_1_palette_4_colors.h  model_3d.h  model_3d_cube.h  model_3d_tree.h  packed_2.h  packed_4.h
examples/experiments/: complex_poly_tess.cpp  complex_poly_tess.h  ear_clipping_triangulation.cpp  monotone_polygon_triangulation.cpp  uv_map.h
examples/experiments/backup/: chunker.h  planarize_division.cpp  planarize_division.h  stroke_tessellation.h
examples/experiments/bentley_ottmann/: AVLTree.h  BentleyOttmannLineIntersection.h  BentleyOttmannLineIntersection_backup.h
examples/experiments/ear_clipper/: EarClippingTriangulation.h
examples/experiments/ear_clipper_with_holes/: ear_clipping_triangulation.cpp  ear_clipping_triangulation.h
examples/experiments/poly_heap_simplifier/: qsort.cpp  simple_components_tree.h  simplify_components.h
examples/libs/rapidxml/: manual.html  rapidxml.hpp
examples/libs/stb_image/: stb_image.cpp  stb_image.h
examples/src/: Resources.cpp  Resources.h  dummy.cpp  dummy.h  example.h
include/microgl/micro-tess/: CMakeLists.txt  LICENSE.MD  README.md
(+745 files in other folders)
